--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 400px;
-  height: 100vh;
-  background-color: #f2f2f2;
+  min-height: 100vh;
+  background-color: #fff;
   margin: 0 auto;
   text-align: center;
 }
