--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -12,28 +12,33 @@
   box-sizing: border-box;
 }
 
+.footer-secondary {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #9887ee;
+  border-top: 1px solid #e0e0e0;
+  padding: 16px 16px 0;
+  height: 125px;
+  width: 400px;
+  box-sizing: border-box;
+  color: #fff;
+  gap: 16px;
+}
+
 .total {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   font-size: 16px;
   margin-bottom: 12px;
 }
 
-.next-button {
-  width: 100%;
-  padding: 12px;
-  background-color: #9887ee;
+.item {
   color: #fff;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.next-button:hover {
-  background-color: #7c6cc8;
 }
 
 .total-price {
