--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,4 +1,6 @@
 .button {
+  display: flex;
+  justify-content: center;
   width: 100%;
   padding: 12px;
   background-color: #9887ee;
@@ -14,6 +16,14 @@
   background-color: #ad9ef0;
 }
 
-.button:hover {
-  background-color: #7c6cc8;
+.third {
+  width: 50%;
+  background-color: #fef1f5;
+  color: #ffa2c1;
+}
+
+.gray {
+  width: 50%;
+  background-color: #f7f7f7;
+  color: #a5a1a1;
 }
