--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,13 +2,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
-  height: 20px;
+  position: fixed;
+  height: 40px;
+  box-sizing: border-box;
+  width: 400px;
+  padding: 20px;
 }
 
 .close-button {
+  left: 20px;
+  top: 15px;
   position: absolute;
-  left: 0;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -16,8 +20,9 @@
 }
 
 .add-button {
+  top: 15px;
+  right: 20px;
   position: absolute;
-  right: 0;
   background-color: transparent;
   border: none;
   cursor: pointer;
