--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -1,13 +1,11 @@
 .container {
   display: flex;
   flex-direction: column;
-  padding: 20px 20px 0 20px;
+  padding: 40px 20px 100px 20px;
   gap: 30px;
   box-sizing: border-box;
-  min-height: 100vh;
-}
-
-.content-container {
+  min-height: 80vh;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
