--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -1,3 +1,9 @@
+.cart-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .cart-list-container {
   width: 100%;
   height: 100%;
